--- a/view/searchFood.ejs
+++ b/view/searchFood.ejs
@@ -37,9 +37,9 @@
 
         <!-- 卡路里 -->
         <div class="value"
-             style="position:absolute; top:42%; left:50%;
-                    transform:translate(-50%, -50%);
-                    font-size:18px; font-weight:bold;">
+             style="position:absolute; top:40%; left:35%;
+                    font-size:18px; font-weight:bold;
+                    text-align: center;">
           0 kcal
         </div>
 
